<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="app_name">福报健康</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="city">长沙市</string>
    <string name="zhuce">欢迎注册福报健康会员</string>
    <string name="zhuce_phone">请输入手机号</string>
    <string name="yzm">输入获取验证码</string>
    <string name="zhuce_shuruyzm">获取验证码</string>
    <string name="zhuce_mima">请输入登陆密码</string>
    <string name="zhuce_mimaagn">请再次输入密码</string>
    <string name="zhuce_queren">确认注册</string>
    <string name="tv_search">搜索医院、科室、医生</string>
    <string name="histoy_phy">历史体检</string>
    <string name="input_key">请输入要搜索的关键字</string>
    <string name="intelligent_guide">智能导诊</string>
    <string name="history_doctor">历史医生</string>
    <string name="my_concern">我的关注</string>
    <string name="select_hospital">请选择医院</string>
    <string name="select_offices">请选择科室</string>
    <string name="order_physical">预约体检</string>
    <string name="heathy_store">健康商场</string>
    <string name="apply_guahao">申请挂号</string>
    <string name="consult">医生咨询</string>
    <string name="ucc">急救中心</string>
    <string name="hospital_num">共找到0家医院</string>
    <string name="yourchoose">您选择的医院</string>
    <string name="doctor_num">共0位医生</string>
    <string name="go_hospital_index">去医院主页</string>
    <string name="please_own_card">请绑定持卡本人的银行卡</string>
    <string name="cardholder">持卡人</string>
    <string name="input_cardholder">请输入持卡人</string>
    <string name="card_number">卡   号</string>
    <string name="input_card_number">请输入卡号</string>
    <string name="card_type">卡类型</string>
    <string name="validity">有效期</string>
    <string name="month_year">年份/月份</string>
    <string name="identity_card">身份证</string>
    <string name="identity_card_num">身份证号:</string>
    <string name="card_num">43123456907899</string>
    <string name="input_identity_card">请输入身份证</string>
    <string name="phone">手机号</string>
    <string name="input_phone">银行预留手机号</string>
    <string name="vcode">验证码</string>
    <string name="get_vcode">获取验证码</string>
    <string name="agree">同意</string>
    <string name="agreement">《用户协议》</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="select_bind_card">选择已绑定的银行卡</string>
    <string name="confirm_pay">确认支付</string>
    <string name="patient">就  诊  人:</string>
    <string name="phyexam_per">体   检  人:</string>
    <string name="patient_name">刘德华</string>
    <string name="address">居住地:湖南常德</string>
    <string name="visiting_card">就诊卡号:</string>
    <string name="phone1">联系电话:</string>
    <string name="phone_num">18688886666</string>
    <string name="hospital">医      院:</string>
    <string name="hospital_name">长沙市第一医院</string>
    <string name="offices_name">普通外科</string>
    <string name="menu_name">关爱老年人体检套餐</string>
    <string name="offices">科  室:</string>
    <string name="menu">套  餐:</string>
    <string name="doctor">医  生:</string>
    <string name="phyexam_money">体检费用：</string>
    <string name="doctor_name">钟汉良</string>
    <string name="offices_type">专家门诊</string>
    <string name="visiting_time">就诊时间：</string>
    <string name="phyexam_time">体检时间：</string>
    <string name="visiting_time1">2015年04月09日</string>
    <string name="visiting_time2">xxxx年xx月xx日</string>
    <string name="order_money">挂号费用：</string>
    <string name="order_money1">100元</string>
    <string name="bank_card_pay">银行卡支付</string>
    <string name="bank_card_pay_msg">支持信用卡储蓄卡，无需开通网银</string>
    <string name="hospital_pay_msg">无绑定银行卡，无诊疗卡用户</string>
    <string name="hospital_pay">到院支付</string>
    <string name="confirm_order">确认订单</string>
    <string name="location">位    置:</string>
    <string name="location1">湖南省长沙市芙蓉区</string>
    <string name="patient_msg">就诊人信息</string>
    <string name="select_phyexam_per">请选择体检人</string>
    <string name="select_phyexam_time">请选择体检时间</string>
    <string name="submit">提  交</string>
    <string name="apply_regis">开始挂号</string>
    <string name="start_ordr">开始预约</string>
    <string name="order_rule">预约挂号规则</string>
    <string name="order_update">班次每日8:00更新</string>
    <string name="cancel">取消</string>
    <string name="camera">拍照</string>
    <string name="album">从手机相册中选择</string>
    <string name="confirm">确定</string>
    <string name="moren">默认</string>
    <string name="price">星级</string>
    <string name="human_qi">价格</string>
    <string name="all">所有分类</string>
    <string name="now_price">现价：￥</string>
    <string name="buy">立即购买</string>
    <string name="number">8888</string>
    <string name="number1">￥1888</string>
    <string name="wodezhifu">我的支付</string>
    <string name="wodeguanzhu">我的关注</string>
    <string name="guahaoyuyue">挂号预约</string>
    <string name="tijianyuyue">体检预约</string>
    <string name="store_order">商城订单</string>
    <string name="my_bingli">我的病历</string>
    <string name="tijianbaogao">体检报告</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="changyongjiuzheng">常用就诊人</string>
        <string name="changyongtijianren">常用体检人</string>
    
    <string name="head">头像</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="address1">常居地</string>
    <string name="person_phone">联系号码</string>
    <string name="pwd_update">密码修改</string>
    <string name="zixuntuijian">推荐专家</string>
     <string name="zixun">热门咨询</string>
    <string name="child">儿科专家</string>
    <string name="woman">妇科专家</string>
    <string name="skin">皮肤专家</string>
    <string name="xinli">心理学专家</string>
    <string name="patientage">患者年龄:</string>
    <string name="patientsex">性别:</string>
    <string name="patientmianshu">病情描述:</string>
     <string name="messagenums"></string>
      <string name="jituanjianjie">其他门店>></string>
    
    
    
     
    
    
    
    
    
    
 

</resources>